--- a/class/main.css
+++ b/class/main.css
@@ -40,7 +40,7 @@ div {
     margin-top: 20px !important;
 }
 
-#log {
+#log, #gameLog {
     text-align: left;
 }
 
@@ -54,7 +54,7 @@ div {
     background-color: #222;
 }
 
-#dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #namesByPointsPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, #fourPoints, #fivePoints, #sixPoints, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+#gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #namesByPointsPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, #fourPoints, #fivePoints, #sixPoints, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
     display: none;
 }
 
@@ -84,7 +84,7 @@ div {
     cursor: pointer;
 }
 
-.button, .backButton, .homeButton, .numberButton {
+.buttonSmallerText, .button, .backButton, .homeButton, .numberButton {
     border-radius: 25px;
 }
 
@@ -105,6 +105,15 @@ div {
     height: 50px;
     width: 250px;
     padding-top: 3px;
+    border: 2px solid white;
+    margin: 20px auto;
+}
+
+.buttonSmallerText {
+    height: 50px;
+    width: 250px;
+    font-size: 20px;
+    padding-top: 10px;
     border: 2px solid white;
     margin: 20px auto;
 }
@@ -202,6 +211,36 @@ div {
     line-height: 1;
     margin: 10px;
 }
+
+.gameUndoButton {
+    border-radius: 25px;
+    height: 80px;
+    width: 80px;
+    padding-top: 13px;
+    line-height: 1;
+    margin: 10px;
+    border: 2px solid white;
+    font-weight: bold;
+    font-family: Font-90-Icons;
+    color: white;
+    background-color: #333;
+    font-size: 45px;
+}
+
+.gameLogButton {
+    border-radius: 25px;
+    height: 80px;
+    width: 80px;
+    padding-top: 16px;
+    line-height: 1;
+    margin: 10px;
+    border: 2px solid white;
+    font-weight: bold;
+    color: white;
+    background-color: #333;
+    font-size: 35px;
+}
+
 
 .asmvButtonFill {
     height: 100px;
@@ -342,7 +381,6 @@ div {
     height: 50px;
     width: 115px;
     border: 2px solid white;
-    background-color: black;
     font-weight: bold;
     font-family: Font-90-Icons;
     color: white;
@@ -592,13 +630,32 @@ div {
 }
 
 #promoInsignia {
-    /* background-image: url(insignia/1-rank.jpg); */
     width: 350px;
     height: 350px;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
+}
+
+.preloadRankImageDiv {
+    width: 350px;
+    height: 350px;
+    border: 1px solid white;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
+}
+
+.preloadAsImageDiv {
+    width: 297.5px;
+    height: 385px;
+    border: 1px solid black;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: white;
 }
 
 #currentPlayer {
