--- a/class/main.css
+++ b/class/main.css
@@ -54,7 +54,7 @@ div {
     background-color: #222;
 }
 
-#gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #namesByPointsPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, #fourPoints, #fivePoints, #sixPoints, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+#teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, #fourPoints, #fivePoints, #sixPoints, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
     display: none;
 }
 
@@ -111,9 +111,21 @@ div {
 
 #mainMenuButton {
     height: 50px;
-    width: 200px;
+    width: 150px;
     padding-top: 3px;
     border: 2px solid white;
+    font-size: 25px;
+    font-weight: bolder;
+    padding-top: 6px;
+}
+
+#attendanceCountMain {
+    height: 50px;
+    width: 50px;
+    border: 2px solid white;
+    padding-top: 6px;
+    border-radius: 25px;
+    font-size: 25px;
 }
 
 .buttonSmallerText {
@@ -299,7 +311,8 @@ div {
 }
 
 #attendanceCount {
-    font-size: 30px;
+    font-size: 50px;
+    margin: 0px;
 }
 
 #popButtons div {
@@ -340,6 +353,11 @@ div {
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
+}
+
+#boysListAttendanceP, #girlsListAttendanceP {
+    margin: 20px 0px 0px 0px;
+    color: lawngreen;
 }
 
 .genderAndBdayContainer {
@@ -421,7 +439,13 @@ div {
     font-size: 20px;
 }
 
-#teamListContainer {
+.name3 {
+    margin: 10px auto;
+    font-size: 25px;
+    text-align: left;
+}
+
+#teamListContainer, #genderListContainer, #attendanceListContainer{
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -433,18 +457,16 @@ div {
     justify-content: space-around;
 }
 
-#team1ListDiv, #team2ListDiv{
+#team1ListDiv, #team2ListDiv, #boysListAttendanceDiv, #girlsListAttendanceDiv{
     width: 190px;
 }
 
-#team1ListDiv {
-    /* float: left; */
+#team1ListDiv, #boysListDiv {
     padding-left: 10px;
     word-wrap: break-word;
 }
 
-#team2ListDiv {
-    /* float: right; */
+#team2ListDiv, #girlsListDiv {
     padding-right: 10px;
     word-wrap: break-word;
 }
