--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 
 /* global styles */
 html {
-    background-color: #443B2B;
+    background-color: #17171E;
 }
 
 body {
@@ -42,6 +42,8 @@ header {
     padding: 10px;
     padding-top: 25px;
     border-radius: 5px;
+    margin: 25px auto;
+    max-width: 1425px;
 }
 
 a:hover .non-index-header {
@@ -56,7 +58,8 @@ a:hover .non-index-header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 25px;
+    margin: 25px auto;
+    max-width: 1400px;
 }
 
 .nav-icon-wrapper {
@@ -150,7 +153,8 @@ a:active .contact-icon-wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 35px;
+    margin: 25px auto;
+    max-width: 1400px;
 }
 
 table {
