--- a/class/main.css
+++ b/class/main.css
@@ -51,7 +51,7 @@ div {
 
 #nameList {
     height: 575px;
-    overflow-y:auto
+    overflow-y:auto;
 }
 
 #missionCheckBoxDiv {
@@ -363,7 +363,12 @@ div {
     flex-direction: row;
 }
 
-#boysListAttendanceP, #girlsListAttendanceP {
+.studentNameHeader {
+    margin: 0px;
+    font-size: 15px;
+}
+
+#boysListAttendanceP, #girlsListAttendanceP, #team1ListP, #team2ListP {
     margin: 20px 0px 0px 0px;
     color: lawngreen;
 }
@@ -506,7 +511,7 @@ div {
     text-align: center;
     line-height: 1;
     border-radius: 25px;
-    padding-top: 5px;
+    padding-top: 7px;
     margin-bottom: 20px;
 }
 
@@ -683,12 +688,46 @@ div {
     font-size: 20px;
 }
 
-#progressBarTable, #progressBarTable td {
+.progressBarTable{
     border: 1px solid white;
-    border-collapse: collapse;
+    border-spacing: 1px;
 }
 
-#progressBarTable td {
+.progressBarTable td {
     height: 10px;
-    width: 20px;
+    width: 10px;
+}
+
+#studentStatsInsignia {
+    width: 150px;
+    height: 150px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
+}
+
+#studentStatsName {
+    width: 200px;
+    height: 150px;
+}
+
+#studentStatsName p {
+    text-align: center !important;
+}
+
+#studentStatsPop p {
+    font-size: 18px;
+    text-align: left;
+}
+
+#rankProgressTableP, #asProgressTableP, #mvProgressTableP, #attendanceProgressTableP, #totalProgressTableP {
+    margin-top: 40px;
+    margin-bottom: 5px;
+}
+
+#studentStatsTopContainerDiv {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
