--- a/class/main.css
+++ b/class/main.css
@@ -74,6 +74,11 @@ div {
     display: none;
 }
 
+#dataInputAlertPop {
+    height: 300px;
+    overflow-y: scroll;
+}
+
 #absentPromotion, #absentBday {
     margin-top: 20px !important;
     color: darkorange;
