--- a/class/main.css
+++ b/class/main.css
@@ -31,6 +31,10 @@ body {
     background-color: black;
 }
 
+input, textarea {
+    font-size: 20px;
+}
+
 #master-wrapper {
     width: 428px;
 }
@@ -70,7 +74,7 @@ div {
     background-color: #222;
 }
 
-#studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, #fourPoints, #fivePoints, #sixPoints, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+#asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
     display: none;
 }
 
@@ -227,12 +231,21 @@ div {
     padding-top: 13px;
 }
 
+.pointButtonContainer {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    justify-content: space-around;
+}
+
 .numberButton {
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     border: 1px solid white;
-    font-size: 90px;
+    font-size: 45px;
     line-height: 1;
+    margin: 0px 5px;
 }
 
 .gamePointButton {
@@ -286,10 +299,6 @@ div {
     margin: 25px auto;
 }
 
-#asPointsPop div, #mvPointsPop div {
-    margin: 15px auto;
-}
-
 #asPop {
     width: 187px;
     float: left;
@@ -317,7 +326,6 @@ div {
 .flex {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 #topMenu {
@@ -415,6 +423,14 @@ div {
     justify-content: center;
 }
 
+.lowerNavigationButtonContainer {
+    margin-top: 20px;
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+
 .backButton, .homeButton {
     border-radius: 25px;
     height: 50px;
@@ -474,6 +490,7 @@ div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    flex-direction: row;
 }
 
 #team1ListDiv, #team2ListDiv, #boysListAttendanceDiv, #girlsListAttendanceDiv{
@@ -651,6 +668,10 @@ div {
     background-color: white;
 }
 
+#asPage1, #asPage2 {
+    margin-bottom: 10px;
+}
+
 #newFirstAndLast, #newGender, #newBday, #editFirstAndLast, #editGender, #editBday{
     text-align: center !important;
 }
@@ -755,4 +776,10 @@ div {
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
+}
+
+#asReason {
+    font-size: 20px;
+    margin: 20px auto;
+    color: orange;
 }
