--- a/class/main.css
+++ b/class/main.css
@@ -219,6 +219,7 @@ div {
     width: 150px;
     border: 1px solid white;
     border-radius: 25px;
+    cursor: pointer;
 }
 
 .asButton, .asButton2, .asButton3, .mvButton3, .mvButton4 {
@@ -433,6 +434,7 @@ div {
     margin-bottom: 25px;
     font-size: 20px;
     background-color: black;
+    cursor: pointer;
 }
 
 #topMenuContainer {
