--- a/class/main.css
+++ b/class/main.css
@@ -837,12 +837,12 @@ a:link, a:visited, a:hover, a:active {
     overflow-y: scroll;
 }
 
-#randomNameDiv {
+#randomNameDiv, #drawingNameDiv {
     margin-top: 150px;
     height: 330px;
 }
 
-#randomName {
+#randomName, #drawingName {
     margin: 0px !important;
     font-size: 75px;
     font-weight: bold;    
