--- a/class/students.css
+++ b/class/students.css
@@ -26,13 +26,12 @@ body {
     padding: 0px;
     margin: 0px;
     font-family: Tahoma, serif;
-    font-size: 30px;
     color: white;
     background-color: #111;
 }
 
 input, textarea {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #master-wrapper {
@@ -45,13 +44,21 @@ div {
     margin-right: auto;
 }
 
+p {
+    font-size: 25px;
+}
+
 a:link, a:visited, a:hover, a:active {
     color: white;
 }
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #asPage3, #attendance2Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editNotePop, #editTeacherNotePop, #modifyNotesPop, #notesPop, #bdayPop, #missionVisibilityPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attendanceListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop, .w01, .w02, .w03, .w04, .w05, .w06, .w07, .w08, .w09, .w10, .w11, .w12, .w13, .w14, .w15, .w16, .w17, .w18, .w19, .w20, .w21, .w22, .w23, .w24, .w25, .w26, .w27, .w28, .w29, .w30, .w31, .w32, .w33 {
+.invisible-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+#studentStatsPop, #infoAlertPop, #rankChartPop, #openInsigniaPop, #missionsPop, #mvPointsPop, #asPointsPop {
     display: none;
 }
 
@@ -59,84 +66,12 @@ a:link, a:visited, a:hover, a:active {
     margin-top: 20px !important;
 }
 
-#log, #gameLog {
-    text-align: left;
-}
-
-#nameList2 {
-    height: 200px;
-    margin-top: 20px !important;
-    overflow-y: auto;
-}
-
-#nameList {
-    height: 600px;
-    margin-top: 20px !important;
-    overflow-y: auto;
-    background-color: black;
-    border: 2px solid #222;
-    padding-top: 20px;
-    border-radius: 25px;
-}
-
-#missionCheckBoxDiv, #notesList, #teacherNotesList {
-    height: 600px;
-    overflow-y: auto;
-    text-align: left;
-    background-color: black;
-    border-radius: 25px;
-    border: 2px solid #222;
-    padding: 10px;
-}
-
-#notesList, #teacherNotesList {
-    margin-top: 20px;
-}
-
-
-#attendance2Pop {
-    border-bottom: 2px solid white;
-    background-color: #222;
-    height: 401px;
-}
-
-#absentPromotion, #absentBday {
-    margin-top: 20px !important;
-    color: darkorange;
-}
-
-#promoListAbsent p, #bdayListAbsent p {
-    color: gray;
-}
-
 .pop {
     padding: 20px;
 }
 
-#dispBday {
-    font-size: 18px;
-}
-
-#dispName {
-    font-size: 40px;
-    margin: 20px auto;
-}
-
 .name {
     cursor: pointer;
-}
-
-#advancedOptionsPop, #missionVisibilityPop {
-    text-align: left;
-}
-
-.checkbox {
-    height: 20px;
-    width: 20px;
-}
-
-.checkboxLabel {
-    font-size: 22px;
 }
 
 .roundButton {
@@ -149,23 +84,10 @@ a:link, a:visited, a:hover, a:active {
     cursor: pointer;
 }
 
-.secretButton {
-    height: 50px;
-    width: 50px;
-    margin: 0px;
-    position: absolute;
-}
-
-.addButton {
-    font-family: Font-90-Icons;
-    font-weight: bolder;
-    padding-top: 9px;
-    background-color: green;
-}
-
 .button {
     height: 50px;
     width: 250px;
+    font-size: 30px;
     padding-top: 3px;
     border: 2px solid white;
     background-color: black;
@@ -174,39 +96,28 @@ a:link, a:visited, a:hover, a:active {
     cursor: pointer;
 }
 
-#mainMenuButton {
-    font-family: Byom-Icons-Trial;
-    padding-top: 8px;
+#submitButton {
+    background-color: dodgerblue;
+    margin-bottom: 40px;
 }
 
-#advancedOptionsButton {
-    padding-top: 9px;
-    font-family: Font-90-Icons;
+#submitButton:hover {
+    background-color: #0077eb;
+    margin-bottom: 40px;
 }
 
-#alertButton {
-    padding-top: 9px;
-    padding-right: 1px;
-    font-family: Font-90-Icons;
+#search {
+    height: 50px;
+    width: 384px;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 20px auto;
 }
 
-#attendanceCountButton {
-    padding-top: 6px;
-}
-
-.deleteButton {
-    background-color: firebrick;
-}
-
-#confirmDeleteStudentButton, #confirmDeleteNoteButton, #confirmDeleteTeacherNoteButton, #confirmResetDrawingButton {
-    background-color: firebrick;
-    display: none;
-}
-
-#search, #search2, #searchLog {
-    height: 30px;
-    width: 300px;
+::placeholder {
     font-size: 20px;
+    color: #aaa
 }
 
 #nameList, #nameList2 {
@@ -276,49 +187,8 @@ a:link, a:visited, a:hover, a:active {
     padding-top: 1px;
     line-height: 1;
     background-color: black;
+    cursor: default !important;
 }
-
-.gamePointButton {
-    border-radius: 25px;
-    height: 80px;
-    width: 80px;
-    border: 1px solid white;
-    background-color: black;
-    padding-top: 7px;
-    font-size: 60px;
-    line-height: 1;
-    margin: 10px;
-}
-
-.gameUndoButton {
-    border-radius: 25px;
-    height: 80px;
-    width: 80px;
-    padding-top: 13px;
-    line-height: 1;
-    margin: 10px;
-    border: 2px solid white;
-    font-weight: bold;
-    font-family: Font-90-Icons;
-    color: white;
-    background-color: #333;
-    font-size: 45px;
-}
-
-.gameLogButton {
-    border-radius: 25px;
-    height: 80px;
-    width: 80px;
-    padding-top: 22px;
-    line-height: 1;
-    margin: 10px;
-    border: 2px solid white;
-    font-weight: bold;
-    color: white;
-    background-color: #333;
-    font-size: 28px;
-}
-
 
 .asmvButtonFill {
     height: 150px;
@@ -357,32 +227,6 @@ a:link, a:visited, a:hover, a:active {
     margin: 30px auto;
 }
 
-#promoPop p {
-    font-size: 50px;
-}
-
-#backupArrays {
-    font-size: 15px;
-}
-
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#topMenu {
-    margin-bottom: 20px;
-}
-
-#attendanceCount {
-    font-size: 50px;
-    margin: 0px;
-}
-
-#popButtons div {
-    margin: 10px auto;
-}
-
 #mvText {
     margin-top: 20px;
     font-size: 25px;
@@ -391,18 +235,7 @@ a:link, a:visited, a:hover, a:active {
     border-radius: 25px;
     padding: 10px;
     color: #eee;
-}
-
-.buttonArr div {
-    margin: 0px auto 20px;
-}
-
-#longVerse {
-    display: none;
-}
-
-#studentPop {
-    padding-bottom: 0px;
+    cursor: pointer;
 }
 
 #missionsPop {
@@ -411,54 +244,6 @@ a:link, a:visited, a:hover, a:active {
 
 #asPointsPop, #mvPointsPop {
     padding-top: 0px;
-}
-
-#attendanceButtonContainer {
-    margin-bottom: 20px;;
-}
-
-#penContainer {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-
-.notesListHeader {
-    margin: 0px;
-    font-size: 18px;
-    color: orange;
-}
-
-#boysListAttendanceP, #girlsListAttendanceP, #team1ListP, #team2ListP {
-    margin: 20px 0px 0px 0px;
-    color: lawngreen;
-}
-
-.genderAndBdayContainer {
-    height: 50px;
-    margin: 10px 7px 0px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-.studentPopButtons {
-    border-radius: 10px;
-    height: 30px;
-    width: 115px;
-    border: 1px solid white;
-    margin-bottom: 25px;
-    font-size: 20px;
-    background-color: black;
-    cursor: pointer;
-}
-
-#topMenuContainer {
-    width: 325px;
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 10px;
 }
 
 .optionButtonContainer {
@@ -493,20 +278,6 @@ a:link, a:visited, a:hover, a:active {
     font-size: 35px;
 }
 
-.textNavigationButton {
-    border-radius: 25px;
-    height: 50px;
-    width: 115px;
-    border: 2px solid white;
-    background-color: black;
-    font-weight: bold;
-    font-family: Tahoma;
-    color: white;
-    background-color: #333;
-    font-size: 30px;
-    padding-top: 3px;
-}
-
 .backButton {
     padding-top: 3px;
     cursor: pointer;
@@ -518,172 +289,15 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .name {
+    font-size: 30px;
     margin: 0px 0px 20px;
+    padding: 5px;
+    color: lightgreen;
 }
 
-.name2 {
-    margin: 10px auto;
-    font-size: 20px;
-}
-
-.name3 {
-    margin: 10px auto;
-    font-size: 25px;
-    text-align: left;
-}
-
-#teamListContainer, #genderListContainer, #attendanceListContainer{
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-#gamePointButtonsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex-direction: row;
-}
-
-#team1ListDiv, #team2ListDiv, #boysListAttendanceDiv, #girlsListAttendanceDiv{
-    width: 190px;
-}
-
-#team1ListDiv, #boysListDiv {
-    padding-left: 10px;
-    word-wrap: break-word;
-}
-
-#team2ListDiv, #girlsListDiv {
-    padding-right: 10px;
-    word-wrap: break-word;
-}
-
-#teamPointsContainer {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-#team1Score, #team2Score {
-    height: 100px;
-    width: 150px;
-    border: 3px solid #555;
-    color: black;
-    font-size: 75px;
-    line-height: 1;
+.name:hover {
     border-radius: 25px;
-    padding-top: 8px;
-    font-weight: bolder;
-}
-
-#dataInputTextField {
-    height: 100px;
-    width: 150px;
-    border: 3px solid #555;
-    color: black;
-    font-size: 50px;
-    text-align: center;
-    line-height: 1;
-    border-radius: 25px;
-    padding-top: 7px;
-    margin-bottom: 20px;
-}
-
-#enterReasonDiv p {
-    font-size: 15px;
-}
-
-#teamPointsContainer p {
-    margin: 5px auto;
-}
-
-#nextPlayer {
-    margin: 15px auto;
-    font-size: 20px;
-}
-
-.cancelButton {
-    background-color: firebrick;
-    font-family: Byom-Icons-Trial;
-    font-size: 35px;
-    padding-top: 3.5px;
-}
-
-.okButton {
-    background-color: green;
-    font-family: Byom-Icons-Trial;
-    padding-top: 3.5px;
-    font-size: 35px;
-}
-
-.deleteButton {
-    background-color: firebrick;
-    font-family: Byom-Icons-Trial;
-    font-size: 25px;
-    padding-top: 8px;
-}
-
-.logEntry {
-    margin-top: 20px !important;
-    font-size: 15px !important;
-}
-
-.note {
-    font-size: 20px;
-    cursor: pointer;
-}
-
-#todaysDate {
-    font-size: 12px !important;
-}
-
-#enterReasonTextField, #addNote, #editNote, #addTeacherNote, #editTeacherNote {
-    width: 375px;
-    height: 150px;
-    font-size: 20px;
-    resize: none;
-}
-
-#initialNote {
-    width: 375px;
-    height: 150px;
-    font-size: 20px;
-    resize: none;
-    margin: 10px 0px;
-}
-
-#notesList, #teacherNotesList {
-    text-align: left !important;
-}
-
-#email1, #email2 {
-    height: 35px;
-    width: 300px;
-    font-size: 20px;
-}
-
-.textInputField1 {
-    height: 35px;
-    width: 375px;
-    font-size: 20px;
-    margin: 10px auto;
-}
-
-.textInputField2 {
-    height: 35px;
-    width: 150px;
-    font-size: 20px;
-}
-
-#newStudentPop p, #editStudentPop p {
-    font-size: 16px;
-    margin-top: 20px;
-}
-
-#newStudentPop input, #editStudentPop input {
-    text-align: left;
-    margin-left: 0 !important;
+    background-color: hsla(0, 0%, 100%, 0.1);
 }
 
 #asPage1, #asPage2, #asPage3 {
@@ -693,33 +307,17 @@ a:link, a:visited, a:hover, a:active {
     background-position: center;
     background-repeat: no-repeat;
     background-color: white;
+    cursor: pointer;
 }
 
 #asPage1, #asPage2 {
     margin-bottom: 10px;
 }
 
-#newFirstAndLast, #newGender, #newBday, #editFirstAndLast, #editGender, #editBday{
-    text-align: center !important;
-}
-
-#randomFilter {
-    text-align: left;
-}
-
 .radioButton {
     height: 25px !important;
     width: 25px !important;
     margin: 10px auto;
-}
-
-#promoInsignia {
-    width: 350px;
-    max-height: 350px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #111;
 }
 
 #displayInsignia {
@@ -729,31 +327,6 @@ a:link, a:visited, a:hover, a:active {
     background-position: center;
     background-repeat: no-repeat;
     background-color: #111;
-}
-
-.preloadRankImageDiv {
-    width: 350px;
-    height: 350px;
-    border: 1px solid white;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #111;
-}
-
-.preloadAsImageDiv {
-    width: 297.5px;
-    height: 385px;
-    border: 1px solid black;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
-}
-
-#currentPlayer {
-    margin: 15px auto;
-    font-size: 20px;
 }
 
 .progressBarTable{
@@ -823,22 +396,6 @@ a:link, a:visited, a:hover, a:active {
     justify-content: space-between;
 }
 
-#preloadImagesContainer {
-    height: 600px;
-    overflow-y: scroll;
-}
-
-#dispStudentPhoto {
-    width: 375px;
-    height: 500px;
-    border: 2px solid #222;
-    border-radius: 25px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #111;
-}
-
 #asReason {
     font-size: 20px;
     margin: 20px auto;
@@ -854,13 +411,6 @@ a:link, a:visited, a:hover, a:active {
     overflow-y: scroll;
 }
 
-#randomNameDiv, #drawingNameDiv {
-    margin-top: 150px;
-    height: 330px;
-}
-
-#randomName, #drawingName {
-    margin: 0px !important;
-    font-size: 75px;
-    font-weight: bold;    
+#RankProgressTableDiv {
+    cursor: pointer;
 }
