--- a/main.css
+++ b/main.css
@@ -8,6 +8,11 @@
     src: url(fonts/Calibri.ttf);
 }
 
+@font-face {
+    font-family: Font-90-Icons;
+    src: url(fonts/Font-90-Icons.ttf);
+}
+
 /* MISSION HIDE RESET #w02, #w03, #w04, #w05, #w06, #w07, #w08, #w09, #w10, #w11, #w12, #w13, #w14, #w15, #w16, #w17, #w18, #w19, #w20, #w21, #w22, #w23, #w24, #w25, #w26, #w27, #w28, #w29, #w30, #w31, #w32, #w33 {
     display: none;
 }*/
@@ -17,6 +22,12 @@
 }
 
 /* global styles */
+
+* {
+    box-sizing: border-box;
+    /* border: 1px solid green; */
+}
+
 html {
     background-color: #17171E;
 }
@@ -180,7 +191,8 @@ table {
 }
 
 td {
-    padding: 18px; 
+    height: 60px !important;
+    overflow: hidden;
 }
 
 .mission-date {
@@ -218,6 +230,10 @@ td {
 .no-video {
     background-color: #777777;
     color: black;
+}
+
+.playButtonSpan {
+    font-family: Font-90-Icons;
 }
 
 /* media queries */
