--- a/class/students.css
+++ b/class/students.css
@@ -81,12 +81,22 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .roundButton {
+    height: 50px;
+    width: 50px;
+    border: 2px solid white;
+    background-color: black;
+    border-radius: 25px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.contactButton {
     font-size: 100px;
     cursor: pointer;
     font-family: MobileIcons;
 }
 
-.roundButton p {
+.contactButton p {
     font-family: Tahoma;
     font-size: 20px;
     color: #ddd;
@@ -394,13 +404,31 @@ a:link, a:visited, a:hover, a:active {
     margin-bottom: 20px;
 }
 
-.checkbox {
-    height: 20px;
-    width: 20px;
+/* .checkbox {
+    height: 18px;
+    width: 18px;
     margin-right: 10px;
 }
 
 .checkboxLabel {
+    font-size: 18px;
+    color: orange;
+} */
+
+.checkboxes label {
+    display: inline-block;
+    padding-right: 10px;
+    white-space: nowrap;  
+}
+
+.checkboxes input {
+    vertical-align: middle;
+    height: 18px;
+    width: 18px;
+}
+
+.checkboxes label span {
+    vertical-align: middle;
     font-size: 18px;
     color: orange;
 }
@@ -409,5 +437,5 @@ a:link, a:visited, a:hover, a:active {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-top: 300px;
+    margin-top: 50px;
 }
