--- a/class/main.css
+++ b/class/main.css
@@ -443,7 +443,8 @@ a:link, a:visited, a:hover, a:active {
 
 .genderAndBdayContainer {
     height: 50px;
-    margin: 10px 7px 0px;
+    width: 375px;
+    margin: 10px auto;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -654,9 +655,10 @@ a:link, a:visited, a:hover, a:active {
 #initialNote {
     width: 375px;
     height: 150px;
-    font-size: 20px;
+    font-size: 25px;
     resize: none;
     margin: 10px 0px;
+    font-family: Tahoma;
 }
 
 #notesList, #teacherNotesList {
@@ -670,16 +672,18 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .textInputField1 {
-    height: 35px;
+    height: 50px;
     width: 375px;
-    font-size: 20px;
+    font-size: 25px;
     margin: 10px auto;
+    font-family: Tahoma;
 }
 
 .textInputField2 {
-    height: 35px;
+    height: 50px;
     width: 150px;
-    font-size: 20px;
+    font-size: 25px;
+    font-family: Tahoma;
 }
 
 #newStudentPop p, #editStudentPop p {
