--- a/class/main.css
+++ b/class/main.css
@@ -74,13 +74,11 @@ a:link, a:visited, a:hover, a:active {
 
 #nameList2, #nameList3 {
     height: 200px;
-    margin-top: 20px !important;
     overflow-y: auto;
 }
 
 #nameList {
     height: 600px;
-    margin-top: 20px !important;
     overflow-y: auto;
     background-color: black;
     border: 2px solid #222;
@@ -222,12 +220,14 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #search, #search2, #search3, #searchLog {
-    height: 30px;
-    width: 300px;
-    font-size: 20px;
-    text-align: center;
-    border: 1px solid transparent;
+    height: 50px;
+    width: 375px;
     border-radius: 15px;
+    border: 1px solid transparent;
+    font-size: 25px;
+    font-family: Tahoma;
+    text-align: center;
+    margin: 20px auto 20px auto;
 }
 
 #nameList, #nameList2 {
@@ -481,7 +481,6 @@ a:link, a:visited, a:hover, a:active {
     width: 325px;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 10px;
 }
 
 .optionButtonContainer {
