--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
     display: none;
 }*/
 
-#w14, #w15, #w16, #w17, #w18, #w19, #w20, #w21, #w22, #w23, #w24, #w25, #w26, #w27, #w28, #w29, #w30, #w31, #w32, #w33 {
+#w15, #w16, #w17, #w18, #w19, #w20, #w21, #w22, #w23, #w24, #w25, #w26, #w27, #w28, #w29, #w30, #w31, #w32, #w33 {
     display: none;
 }
 
