--- a/class/students.css
+++ b/class/students.css
@@ -271,7 +271,7 @@ a:link, a:visited, a:hover, a:active {
     justify-content: center;
 }
 
-.backButton {
+.backButton, .homeButton {
     border-radius: 25px;
     height: 50px;
     width: 115px;
