--- a/class/main.css
+++ b/class/main.css
@@ -947,7 +947,7 @@ a:link, a:visited, a:hover, a:active {
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    color: dodgerblue;
+    color: #72AED3;
 }
 
 #studentData p {
