--- a/class/main.css
+++ b/class/main.css
@@ -882,7 +882,7 @@ a:link, a:visited, a:hover, a:active {
 
 #asReason {
     font-size: 20px;
-    text-align: left;
+    text-align: leftr;
     margin: 20px auto;
     color: orange;
 }
