--- a/class/main.css
+++ b/class/main.css
@@ -662,27 +662,30 @@ a:link, a:visited, a:hover, a:active {
     font-size: 20px;
 }
 
-.textInputField1 {
-    height: 50px;
-    width: 375px;
+.textInputField1, .textInputField2, .textInputField3 {
     border-radius: 15px;
     border: 1px solid transparent;
     font-size: 25px;
     font-family: Tahoma;
     text-align: center;
+}
+
+.textInputField1 {
+    height: 50px;
+    width: 375px;
 }
 
 .textInputField2 {
     height: 50px;
     width: 150px;
-    border-radius: 15px;
-    border: 1px solid transparent;
-    font-size: 25px;
-    font-family: Tahoma;
-    text-align: center;
 }
 
-.textInputField1:focus, .textInputField2:focus, #search:focus, #search2:focus, #search3:focus, #initialNote:focus, #dataInputTextField:focus, #enterReasonTextField:focus, #addNote:focus, #editNote:focus, #addTeacherNote:focus, #editTeacherNote:focus {
+.textInputField3 {
+    height: 50px;
+    width: 175px;
+}
+
+.textInputField1:focus, .textInputField2:focus, .textInputField3:focus, #search:focus, #search2:focus, #search3:focus, #initialNote:focus, #dataInputTextField:focus, #enterReasonTextField:focus, #addNote:focus, #editNote:focus, #addTeacherNote:focus, #editTeacherNote:focus {
     outline: none;
     border: 2px solid dodgerblue;
 }
